[tool.poetry]
name = "bazel2snyk"
version = "0.1.0"
description = "Convert Bazel query output to Snyk depGraph for testing and monitoring"
authors = ["Scott Esbrandt <scott.esbrandt@snyk.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python =  ">=3.9,<3.11"
pysnyk = "^0.9.2"
typer = "^0.4.1"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.3.0"
pytest = "^8.1.1"
ruff = "^0.3.4"
pytest-ruff = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
